--- a/reserveTime/account/templates/password_reset_complete.html
+++ b/reserveTime/account/templates/password_reset_complete.html
@@ -22,19 +22,7 @@
 </head>
 <body id="profile-body">
     
-    <header>
-        <div class="container custom-container shadow">
-            <div class="row justify-content-between">
-                <div class="left side">
-                    <a href="#">
-                        <img src="{% static 'images/logo.png' %}" width="250px" alt="">
-                    </a>
-                </div>
-            </div>
-           
-        </div>
-       
-    </header>
+    {% include 'partials/header.html' %}
 
     <!-- <main class="mb-5"> -->
         <div class="container main-register-container pb-5">
