--- a/reserveTime/core/templates/partials/company-header.html
+++ b/reserveTime/core/templates/partials/company-header.html
@@ -1,7 +1,7 @@
 {% load static custom_tags %}
 
-<header >
-    <div class="container custom-container shadow">
+<header class="bg-white shadow" >
+    <div class="container custom-container ">
         <div class="row justify-content-between">
             <div class="left side">
                 <a href="{% url 'core:home' %}">
