--- a/reserveTime/core/templates/company-admin-page.html
+++ b/reserveTime/core/templates/company-admin-page.html
@@ -25,10 +25,20 @@
     {% include 'partials/company-header.html' %}
   
     <main>
-        <div class="container mt-3 company-admin-container">
+        <div class="custom-container mt-5 company-admin-container">
+            <h3 class="bottom-border bold full text-center pb-3 mb-5">Welcome to the personal page of your company</h3>
+
             <div class="row">
-                <h3 class="bottom-border bold full text-center pb-3 mb-5">Welcome to the personal page of your company</h3>
-                <div class="col-lg-6 d-flex justify-content-center">
+                <h4 class="full bold bottom-border m-3 pb-3">Retaurant Performance for 1 month</h4>
+                <div class="row">
+                    <div class="col-4">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4 d-flex justify-content-center">
                     <a href="{% url 'restaurant:photo' %}">
                         <div class="link-box" style="background-color: #a285c5;">
                             <i class="fas fa-images"></i>
@@ -39,7 +49,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 d-flex justify-content-center">
+                <div class="col-lg-4 d-flex justify-content-center">
                     <a href="{% url 'restaurant:menu' %}">
                         <div class="link-box" style="background-color: #68cab6;">
                             <i class="fas fa-hamburger"></i>
@@ -47,7 +57,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 d-flex justify-content-center">
+                <div class="col-lg-4 d-flex justify-content-center">
                     <a href="{% url 'restaurant:company-infos' user.company.pk %}">
                         <div class="link-box" style="background-color: #22ba9b;">
                             <i class="fas fa-info-circle"></i>
@@ -55,18 +65,18 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 d-flex justify-content-center">
-                    <a href="{% url 'restaurant:company-reviews' user.company.pk %}">
-                        <div class="link-box" style="background-color: #fbb168;">
-                            <i class="fas fa-comment-alt"></i>
+                <div class="col-lg-4 d-flex m-auto justify-content-center">
+                    <a href="{% url 'restaurant:company-tables' user.company.pk %}">
+                        <div class="link-box" style="background-color: #fbb168 ;">
+                            <i class="fas fa-table"></i>
                             <div class="ml-2 d-flex flex-direction-column">
-                                <span class="bold">Reviews</span>
-                                <span class="bold">{{user.company.company_comment.all.count}}</span>
+                                <span class="bold">Tables</span>
+                                <span class="bold">{{user.company_table.all.count}}</span>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 d-flex justify-content-center">
+                <div class="col-lg-4 d-flex justify-content-center">
                     <a href="{% url 'restaurant:company-users' user.company.pk %}">
                         <div class="link-box" style="background-color: #666981;">
                             <i class="fas fa-users"></i>
@@ -77,7 +87,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 d-flex justify-content-center">
+                <div class="col-lg-4 d-flex justify-content-center">
                     <a href="{% url 'restaurant:company-reservations' user.company.pk %}">
                         <div class="link-box" style="background-color: #e17695;">
                             <i class="fas fa-clock"></i>
@@ -88,17 +98,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 d-flex m-auto justify-content-center">
-                    <a href="{% url 'restaurant:company-tables' user.company.pk %}">
-                        <div class="link-box" style="background-color: #CD6155 ;">
-                            <i class="fas fa-table"></i>
-                            <div class="ml-2 d-flex flex-direction-column">
-                                <span class="bold">Tables</span>
-                                <span class="bold">{{user.company_table.all.count}}</span>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                
             </div>
         </div>
     </main>
