--- a/reserveTime/core/templates/company-profile.html
+++ b/reserveTime/core/templates/company-profile.html
@@ -49,9 +49,6 @@
 
     </style>
     
-    
-
-
 </head>
 
 
@@ -90,7 +87,7 @@
         </div>
     </section>
 
-    <main class="mb-5">
+    <main>
         <div class="container custom-container main-container" >
             <div class="inner-container bg-white">
                 <div class="row">
@@ -272,7 +269,7 @@
                                                     <div class="col-6">
                                                         <div class="menu-item">
                                                             <div class="menu-item-header">
-                                                                <div class="menu-title"><span>{{menu.title}} </span></div>
+                                                                <div class="menu-title"><span>{{menu.title|capfirst}} </span></div>
                                                                 <div class="menu-price"><span>${{menu.price}} </span></div>
                                                             </div>
                                                             <div class="menu-description">
@@ -420,34 +417,22 @@
                             <span style="color: #6f737b;"><i class="far fa-thumbs-up mr-2"></i><small>{{liked_users_count|percentage:all_likes}} % of people would recommend it to a friend</small></span>
                         </div>
                     </div>
-                    <div class="row mt-3 mb-5 pr-5">
-                        <div class="col-4">
+                    <div class="row mt-3 mb-5">
+                        <div class="col-12 m-auto col-sm-8 col-md-6 col-lg-4">
                             <canvas id="likeChart"></canvas>
                             <div class="full text-center">
                                 <p>Based on {{liked_users_count|add:disliked_users_count}} recomendations</p>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-12 m-auto col-sm-8 col-md-6 col-lg-4">
                             <canvas id="ratingChart"></canvas>
                         </div>
-                        <div class="col-4">
+                        <div class="col-12 col-sm-8 col-md-8 m-auto col-lg-4">
                             <canvas id="userRatingChart"></canvas>
                         </div>
                     </div>
 
-                    <style>
-                        .sort-form{
-                            width: 30%;
-                        }
-                        .comment-sort{
-                            padding-left: 100px;
-                        }
-                        .comments-box{
-                            width: 80%;
-                            margin: auto;
-                        }
-                    </style>
-                    
+                   
 
                     <div class="comment-sort mb-5 mt-5">
                         <strong>Sort by</strong><br>
