--- a/reserveTime/core/templates/home-page.html
+++ b/reserveTime/core/templates/home-page.html
@@ -28,6 +28,13 @@
             }
         }
     </script>
+
+
+<style>
+    .star i {
+        color: #da3743;
+    }
+</style>
 </head>
 <body>
     
@@ -153,33 +160,33 @@
                         {% for company in companies %}
                             <div class="col-12 col-lg-3 col-sm-6 card-box">
                                 <div class="card">
-                                    <a href="{% url 'core:company-profile' company.pk %}">
+                                    <a href="{% url 'core:company-profile' company.company.pk %}">
                                         <div class="card-img">
-                                            {% if company.cover_photo %}
-                                                <img src="{{company.cover_photo.url}}" alt="Restauran image" >
+                                            {% if company.company.cover_photo %}
+                                                <img src="{{company.company.cover_photo.url}}" class="card-img-self" alt="Restauran image" >
                                             {% else %}
-                                                <img src="{% static 'images/img3.jpg' %}" alt="Restauran image" >
+                                                <img src="{% static 'images/img3.jpg' %}" class="card-img-self" alt="Restauran image" >
                                             {% endif %}
                                             
                                         </div>
                                         <div class="card-body">
-                                            <p class="name">{{company.company_name}}</p>
+                                            <p class="name">{{company.company.company_name}}</p>
                                             <div class="review-box d-flex">
-                                                <div class="stars d-flex">
-                                                    <div class="star"><i class="fas fa-star star-active"></i></div>
-                                                    <div class="star"><i class="fas fa-star star-active"></i></div>
-                                                    <div class="star"><i class="fas fa-star star-active"></i></div>
-                                                    <div class="star"><i class="fas fa-star star-deactive"></i></div>
-                                                    <div class="star"><i class="fas fa-star star-deactive"></i></div>
+                                                <div data-type="{{company.company_overall}}" class="stars rating-box d-flex">
+                                                    <div class="star"><i class="far fa-star"></i></div>
+                                                    <div class="star"><i class="far fa-star"></i></div>
+                                                    <div class="star"><i class="far fa-star"></i></div>
+                                                    <div class="star"><i class="far fa-star"></i></div>
+                                                    <div class="star"><i class="far fa-star"></i></div>
                                                 </div>
-                                                <p class="review-text ml-2">1875 reviews</p>
+                                                <p class="review-text ml-2">{{company.company.company_comment.all|length}} reviews</p>
                                             </div>
-                                            <p class="location">{{company.city_location}}, {{company.province_location}}</p>
+                                            <p class="location">{{company.company.city_location}}, {{company.company.province_location}}</p>
                                             <span class="booking-count">
                                                 <span>
                                                     <svg width = 20 viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M15.5,5 C15.2239,5 15,5.223846 15,5.5 L15,6.5 C15,6.77615 15.2239,7 15.5,7 L17.5858,7 L14,10.58578 L12.70711,9.29291 L12.35355,8.93933 C12.15829,8.74408 11.84171,8.74408 11.64645,8.93933 L11.29289,9.29291 L5,15.5858 L5,7 L11.5,7 C11.77614,7 12,6.77615 12,6.5 L12,5.5 C12,5.22385 11.77614,5 11.5,5 L5,5 C3.89543,5 3,5.89542 3,7 L3,17 C3,18.1046 3.89543,19 5,19 L19,19 C20.1046,19 21,18.1046 21,17 L21,14.5 C21,14.2238 20.7761,14 20.5,14 L19.5,14 C19.2239,14 19,14.2238 19,14.5 L19,17 L6.4142,17 L12,11.41422 L13.2929,12.70709 L13.6464,13.06067 C13.8417,13.25592 14.1583,13.25592 14.3536,13.06067 L14.7071,12.70709 L19,8.41422 L19,10.5 C19,10.77615 19.2239,11 19.5,11 L20.5,11 C20.7761,11 21,10.77615 21,10.5 L21,6 L21,5.5 C21,5.223846 20.7761,5 20.5,5 L20,5 L15.5,5 Z" fill="#2D333F" fill-rule="nonzero"></path></g></svg>
                                                 </span>
-                                                <span>34 times today</span>
+                                                <span>{{company.reservation_count}} times today</span>
                                             </span>
                                         </div>
                                     </a>
@@ -304,10 +311,14 @@
                 }
             });
         });
+
+        for(var index = 0; index < $('.rating-box').length; index++ ){
+                for(var i = 0; i< parseInt($('.rating-box').eq(index).data('type'));i++){
+                    $('.rating-box').eq(index).find('i').eq(i).removeClass('far').addClass('fas')
+                }
+            }
     </script>
 
-    <script>
-       
-    </script>
+   
 </body>
 </html>
