--- a/reserveTime/core/templates/user-saved-restaurants.html
+++ b/reserveTime/core/templates/user-saved-restaurants.html
@@ -24,53 +24,21 @@
 </head>
 <body id="profile-body">
     
-    <header>
-        <div class="container custom-container header-container">
-            <div class="row justify-content-between">
-                <div class="left side">
-                    <a href="{% url 'core:home' %}">
-                        <img src="{% static 'images/logo.png' %}" width="250px" alt="">
-                    </a>
-                </div>
-                <div class="right side">
-                    <div class="user-profile left-border">
-                        <span> Hi, {{user.first_name}} <i class="fas fa-chevron-down" id="arrow-down"></i></span>
-                        <div class="custom-drop-down shadow" style="display: none;">
-                            <div class="triangle"></div>
-                            <span>Hello, user</span>
-                            <ul>
-                                <li><a href="#">My Profile</a></li>
-                                <li><a href="#">My Dining History</a></li>
-                                <li><a href="#">My Saved Restaurants</a></li>
-                                <li><a href="#">Sign out</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="notification">
-                        <button type="button" class="header-btn"><i class="far fa-bell"></i></button>
-                        <div class="custom-drop-down shadow p-3" style="display: none;">
-                            <div class="triangle"></div>
-                            <span>Notifications</span>
-                            <p class="pl-2 pr-2">Nothing to see here, you’re all caught up!</p>
-                        </div>
-                    </div>
-                </div>
+    {% include 'partials/header.html' %}
+
+    <div class="container custom-container bg-white border-top">
+        <div class="row username-box">  
+            {% if user.profile_img %}
+                <img src="{{user.profile_img.url}}" alt="">
+            {% else %}
+                <img src="{% static 'images/profile.png' %}" alt="">
+            {% endif %}
+            <div>
+                <h2> {{user.first_name|capfirst}} {{user.last_name|capfirst}} </h2>
+                <span>0 points</span>
             </div>
         </div>
-        <div class="container custom-container">
-            <div class="row username-box">  
-                {% if user.profile_img %}
-                    <img src="{{user.profile_img.url}}" alt="">
-                {% else %}
-                    <img src="{% static 'images/profile.png' %}" alt="">
-                {% endif %}
-                <div>
-                    <h2> {{user.first_name}} {{user.last_name}} </h2>
-                    <span>0 points</span>
-                </div>
-            </div>
-        </div>
-    </header>
+    </div>
 
     <main>
         <div class="container custom-container">
@@ -146,13 +114,6 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
-    <script>
-        $(document).ready(function(){
-            $('.header-btn').click(function(){
-                $('.custom-drop-down').hide()
-                $(this).siblings('.custom-drop-down').slideToggle()
-            });
-        });
-    </script>
+    
 </body>
 </html>
