--- a/reserveTime/static/css/responsive.css
+++ b/reserveTime/static/css/responsive.css
@@ -62,6 +62,15 @@
     .company-header-img{
         height: 350px;
     }
+    #FindTableForm .d-flex{
+        margin: 10px 0px !important;
+    }
+}
+
+@media (max-width : 1025px){
+    .comments-box{
+        width: 100% !important;
+    }
 }
 
 @media (max-width : 992px) {
@@ -88,7 +97,7 @@
         height: 100%;
     }
 }
-@media (max-width : 768px){
+@media (max-width : 769px){
     .custom-container{
         max-width: 100%;
         margin-top: 0 !important;
@@ -110,7 +119,67 @@
         max-width: 50%;
         flex: none;
     }
+    main, header{
+        margin: 0px !important;
+    }
+    .sort-form {
+        width: 60%;
+    }
+    .main-register-container {
+        margin: 0;
+        border-radius: 0px;
+        max-width: 100%;
+        padding: 0px 50px;
+    }
+    .register-btn, .login-btn{
+        font-size: 13px;
+    }
+    .profile-menu-list{
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin: 15px 0px;
+    }
+    .profile-menu-list li{
+        margin: 0;
+    }
+   
 }
+
+@media (max-width : 577px){
+    .save-restaurant-btn {
+        padding: 15px 20px;
+        font-size: 14px;
+        right: 35px;
+        top: 35px;
+    }
+    .left img{
+        width: 170px !important;
+    }
+    .overview{
+        font-size: 14px;
+    }
+    .menu-description{
+        font-size: 14px;
+        text-align: justify;
+    }
+    .menu-section{
+        margin-bottom: 40px;
+    }
+    .company-info-block{
+        font-size: 13px;
+    }
+    .company-info-block .col-6 {
+        margin-bottom: 20px;
+    }
+    .comments-box{
+        font-size: 13px;
+    } 
+    .name, .content {
+        padding: 10px;
+    }   
+}
+
+
 @media (max-width : 450px) {
     .container{
         padding-left: 0;
@@ -133,10 +202,10 @@
         justify-content: space-between;
         padding: 0 5px;
     }
-    .location,
+    /* .location,
     span{
         font-size: 11px;
-    }
+    } */
     .owl-nav{
         left: -17px;
         width: 111%;
