--- a/reserveTime/core/templates/company-admin-page.html
+++ b/reserveTime/core/templates/company-admin-page.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col-lg-4 d-flex justify-content-center">
                     <a href="{% url 'restaurant:company-infos' user.company.pk %}">
-                        <div class="link-box" style="background-image: -webkit-linear-gradient(90deg, #ee0979 0%, #ff6a00 100%);">
+                        <div class="link-box" style="background-image: -webkit-linear-gradient(90deg, #D6ED17FF 0%, #EEA47FFF 100%);">
                             <i class="fas fa-info-circle"></i>
                             <span class="ml-2 bold">Informations</span>
                         </div>
@@ -215,7 +215,7 @@
         }
 
         var ctx_1 = document.getElementById("PieChart").getContext('2d');
-        let colorHex = ['#60BD47 ', '#F76C5E', '#F76C3D']
+        let colorHex = ['#FCF6F5FF ', '#EDC2D8FF', '#8ABAD3FF']
         let labels = ['Food','Service', 'Ambience']
 
         var ctx_1 = new Chart(ctx_1, {
