--- a/reserveTime/core/templates/company-list.html
+++ b/reserveTime/core/templates/company-list.html
@@ -15,6 +15,12 @@
     <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>Company List</title>
+
+    <style>
+        .star i{
+            color: #da3743;
+        }
+    </style>
 </head>
 <body id="profile-body">
     
